--- a/style.css
+++ b/style.css
@@ -29,13 +29,120 @@ body {
   font-family: var(--Body-and-CTA);
 }
 
+p {
+  line-height: 1.6;
+}
+
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
+
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
+  font-family: var(--Heading);
   font-weight: 600;
+  color: var(--Very-Dark-Cyan);
+}
+
+/* - HEADER - */
+
+/* ======
+NAVAGATION
+====== */
+header {
+  background-color: var(--Very-Pale-Cyan);
+  padding: 1.5rem 1rem;
+}
+
+.nav-wrapper {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.nav-container {
+  display: flex;
+  flex-direction: row-reverse;
+  position: relative;
+}
+
+.nav-container ul li a {
+  display: block;
+  padding: 0.3rem 1.5rem;
+  color: var(--Very-Dark-Cyan);
+  background-color: #fff;
+  border-radius: 1rem;
+  font-weight: 700;
+  font-size: 0.9rem;
+  text-align: center;
+  box-shadow: rgba(100, 100, 111, 0) 0px 7px 29px 0px;
+}
+
+.nav-container::before {
+  content: "";
+  background: url(./images/logo.svg);
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 5px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-size: 130px;
+}
+
+/* - MAIN - */
+
+/* ======
+HERO
+====== */
+.hero-wrapper {
+  padding: 1.5rem 1.5rem;
+  background-color: var(--Very-Pale-Cyan);
+}
+
+.hero-container {
+  position: relative;
+  text-align: center;
+  margin: 2rem auto 0;
+  max-width: 1440px;
+  background-color: var(--Very-Pale-Cyan);
+  background-image: url(./images/bg-hero-mobile.svg);
+}
+
+.hero-container a {
+  display: block;
+  margin: 2rem auto;
+  padding: 0.8rem;
+  width: 80%;
+  color: #fff;
+  background-color: var(--Pink);
+  border-radius: 2rem;
+  font-weight: 400;
+  font-size: 0.9rem;
+  text-align: center;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.hero-container img {
+  margin-top: 1.3rem;
+  max-width: 95%;
+}
+
+.hero-text h1 {
+  font-size: 1.8rem;
+  line-height: 1.4;
+}
+
+.hero-text p {
+  margin-top: 1.1rem;
+  color: var(--Very-Dark-Cyan);
 }
 
 /* ======
