--- a/style.css
+++ b/style.css
@@ -130,21 +130,67 @@ HERO
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
+.hero-container h1 {
+  font-size: 1.8rem;
+  line-height: 1.4;
+}
+
+.hero-container p {
+  margin-top: 1.1rem;
+  color: var(--Very-Dark-Cyan);
+}
+
 .hero-container img {
   margin-top: 1.3rem;
   max-width: 95%;
 }
 
-.hero-text h1 {
-  font-size: 1.8rem;
-  line-height: 1.4;
+/* ======
+BENEFITS
+====== */
+.benefits-wrapper {
+  padding: 1.5rem 1rem;
 }
 
-.hero-text p {
-  margin-top: 1.1rem;
-  color: var(--Very-Dark-Cyan);
+.benefits-card {
+  font-size: 1rem;
+  text-align: center;
+  padding: 2rem 0rem;
+  margin-bottom: 2.8rem;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 1rem;
+  color: var(--Grayish-Blue);
 }
 
+.benefits-card h2 {
+  padding-top: 4rem;
+  padding-bottom: 1rem;
+}
+
+.benefits-card img {
+  max-width: 95%;
+  padding: 2rem 1rem 0;
+}
+
+.benefits-card:nth-child(1) {
+  margin-top: 2.8rem;
+}
+
+.card1 p {
+  width: 86%;
+  margin: 0 auto;
+}
+
+.card2 p {
+  padding-bottom: 2rem;
+  width: 84.3%;
+  margin: 0 auto;
+}
+
+.card3 p {
+  width: 80%;
+  margin: 0 auto;
+}
 /* ======
 ATTRIBUTION
 ====== */
