--- a/style.css
+++ b/style.css
@@ -179,25 +179,184 @@ BENEFITS
 .card1 p {
   width: 86%;
   margin: 0 auto;
+  opacity: 0.6;
 }
 
 .card2 p {
   padding-bottom: 2rem;
   width: 84.3%;
   margin: 0 auto;
+  opacity: 0.6;
 }
 
 .card3 p {
   width: 80%;
   margin: 0 auto;
+  opacity: 0.6;
 }
+
+/* - FOOTER - */
+
+/* ======
+FOOTER
+====== */
+.footer-wrapper {
+  position: relative;
+  margin-top: 10rem;
+  padding: 1.5rem 1.5rem 0.5rem;
+  background-color: var(--Very-Dark-Cyan);
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  max-width: 1440px;
+  padding-top: 12rem;
+  color: #fff;
+}
+
+.footer-container::before {
+  content: "";
+  background: url(./images/footer-logo.svg);
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 18%;
+  right: 0;
+  bottom: 0;
+  left: 15px;
+  background-size: 200px;
+}
+
+footer ul li a,
+.footer-location a,
+.footer-phone a,
+.footer-email a {
+  color: #fff;
+}
+
+/* ======
+CTA 
+====== */
+.cta {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  position: absolute;
+  background-color: #fff;
+  padding: 3rem 0.5rem;
+  margin: 0 0.7rem;
+  border-radius: 1rem;
+  text-align: center;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  top: -15%;
+  right: 0px;
+  left: 0px;
+}
+
+.cta h2 {
+  font-size: 1.25rem;
+}
+
+.cta a {
+  display: block;
+  margin: 0 auto;
+  padding: 0.8rem;
+  width: 70%;
+  color: #fff;
+  background-color: var(--Pink);
+  border-radius: 2rem;
+  font-weight: 400;
+  font-size: 0.8rem;
+  text-align: center;
+  box-shadow: rgba(100, 100, 111, 0.3) 0px 7px 29px 0px;
+}
+
+/* ======
+FOOTER INFO
+====== */
+.footer-location,
+.footer-phone,
+.footer-email {
+  font-size: 1rem;
+}
+
+.footer-location a {
+  margin-top: 1rem;
+}
+
+.footer-location a:before {
+  content: "";
+  background: url(./images/icon-location.svg);
+  background-repeat: no-repeat;
+  padding: 0 1.2rem 1rem;
+}
+
+a[href^="tel"]:before {
+  content: "";
+  display: inline-block;
+  background: url(./images/icon-phone.svg);
+  padding: 0 1.2rem 1.2rem;
+  background-repeat: no-repeat;
+}
+
+a[href^="mailto"]:before {
+  content: "";
+  display: inline-block;
+  background: url(./images/icon-email.svg);
+  padding: 0 1.2rem 1rem;
+  background-repeat: no-repeat;
+}
+
+.margin-left {
+  margin-left: 39px;
+}
+
+/* ======
+NAV
+====== */
+.nav-footer ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 2rem;
+}
+
+/* ======
+SOCIAL MEDIA
+====== */
+
+.social-media {
+  margin-top: 2rem;
+}
+
+.social-media p {
+  margin-top: 1.5rem;
+  font-size: 0.8rem;
+  text-align: center;
+}
+
+.social-media ol {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.fa-brands {
+  color: #fff;
+  border: 1px solid white;
+  border-radius: 50%;
+  padding: 0.5rem 0.7rem;
+}
+
 /* ======
 ATTRIBUTION
 ====== */
-/* .attribution {
-  font-size: 11px;
+.attribution {
+  margin-top: 1rem;
+  font-size: 0.5rem;
   text-align: center;
 }
 .attribution a {
-  color: hsl(228, 45%, 44%);
-} */
+  color: var(--Pink);
+}
